--- a/week-1/index.html
+++ b/week-1/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>BrokenLinc</title>
+		<title>BrokenLinc - Experiments in web animation</title>
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<!--[if lt IE 9]>
 		<script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -26,7 +26,7 @@
 			<nav>
 				<ul>
 					<li><a href="/">Home</a></li>
-					<li><a href="/week-1">Week 1</a></li>
+					<li><a href="/week-1">Episode 1: Circle</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -35,25 +35,7 @@
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <!-- /masterpage.header -->
 
-	<style>
-	body {
-		background-color:#def;
-	}
-	.animation-container svg {
-		opacity: 0;
-		position:absolute;
-		top:50%;
-		left:50%;
-		transform: translate(-50%, -50%);
-	}
-	.animations-ready .animation-container svg {
-		opacity: 1;
-	}
-	#circle-logo {
-		transform: rotate(-30deg);
-		transform-origin:240px 240px;
-	}
-	</style>
+	<link rel="stylesheet" href="styles.css">
 
 	<div class="animation-container">
 		<svg width="280px" height="280px" viewBox="0 0 480 480" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
@@ -72,149 +54,12 @@
 		</svg>
 	</div>
 
-
 	<div class="options-menu">
 		<a class="js-replay" href="javascript:void(0)">Replay</a>
 	</div>
 
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
-	<script>
-
-		//CUSTOM ANIMATIONS!
-
-		var ring_draw = {
-			css: {
-				'stroke-dashoffset': 0,
-				'stroke-width': 40
-			},
-			duration: 400,
-			easing: 'easeInQuad'
-		}
-
-		var presequence = [
-			{
-				what:'#circle-logo',
-				css: {
-					opacity: 0
-				}
-			},
-			{
-				what:'circle',
-				css: {
-					'stroke-width': 0
-				}
-			},
-			{
-				what:'#ring-inner',
-				css: {
-					'stroke-dashoffset': 230
-				}
-			},
-			{
-				what:'#ring-middle',
-				css: {
-					'stroke-dashoffset': 335
-				}
-			},
-			{
-				what:'#ring-outer',
-				css: {
-					'stroke-dashoffset': 440
-				}
-			},
-		];
-		var sequence = [
-			{
-				when:100,
-				what:'#circle-logo',
-				how: {
-					css: {
-						'opacity': 1
-					},
-					duration: 200,
-					easing: 'easeInQuad'
-				}
-			},
-			{
-				when:400,
-				what:'#ring-inner',
-				how: ring_draw
-			},
-			{
-				when:500,
-				what:'#ring-middle',
-				how: ring_draw
-			},
-			{
-				when:600,
-				what:'#ring-outer',
-				how: ring_draw
-			},
-		];
-
-		// var ring_bloop = {
-		// 	css: {
-		// 		'stroke-width': 40
-		// 	},
-		// 	duration: 200,
-		// 	easing: 'easeInQuad'
-		// };
-		// var bloop_presequence = [
-		// 	{
-		// 		what:'circle',
-		// 		css: {
-		// 			'stroke-width': 0
-		// 		}
-		// 	}
-		// ];
-		// var bloop_sequence = [
-		// 	{
-		// 		when:200,
-		// 		what:'#ring-inner',
-		// 		how: ring_bloop
-		// 	},
-		// 	{
-		// 		when:300,
-		// 		what:'#ring-middle',
-		// 		how: ring_bloop
-		// 	},
-		// 	{
-		// 		when:400,
-		// 		what:'#ring-outer',
-		// 		how: ring_bloop
-		// 	},
-		// ];
-
-
-		//AUTOMATION -_-
-
-		function doanim() {
-			var $circle_logo = $('svg');
-
-			for(var i in presequence) {
-				var preset = presequence[i];
-
-				$(preset.what, $circle_logo).css(preset.css);
-			}
-
-			$('html').addClass('animations-ready');
-
-			for(var i in sequence) {
-				var animation = sequence[i];
-
-				setTimeout(function(animation) {
-					$(animation.what, $circle_logo).animate(
-						animation.how.css, 
-						animation.how.duration, 
-						animation.how.easing);
-				}, animation.when, animation);
-			}
-		}
-		doanim();
-
-		$('.js-replay').click(doanim);
-	</script>
+	<script src="scripts.js"></script>
 
 <!-- masterpage.footer -->
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
