Renaming weeks to episodes.

--- a/episode-1/index.html
+++ b/episode-1/index.html
@@ -26,7 +26,7 @@
 			<nav>
 				<ul>
 					<li><a href="/">Home</a></li>
-					<li><a href="/week-1">Episode 1: Circle</a></li>
+					<li><a href="/episode-1">Episode 1: Circle</a></li>
 				</ul>
 			</nav>
 		</header>
