--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<nav>
 				<ul>
 					<li><a href="/">Home</a></li>
-					<li><a href="/week-1">Episode 1: Circle</a></li>
+					<li><a href="/episode-1">Episode 1: Circle</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -40,7 +40,7 @@
 	<h1>Experiments in web animation</h1>
 	<nav class="nav--linklist">
 		<ul>
-			<li><a href="/week-1">Week 1</a></li>
+			<li><a href="/episode-1">Episode 1: Circle</a></li>
 		</ul>
 	</nav>
 </section>
